SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Member__c/Member__c.object-meta.xml
<CustomObject>
    <description>개체 테스트</description>
    <label>회원</label>
    <nameField>
        <label>회원 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>