SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Member__c/fields/MemberNo__c.field-meta.xml
<CustomField>
    <fullName>MemberNo__c</fullName>
    <label>회원 번호</label>
    <length>80</length>
    <type>Text</type>
</CustomField>