SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Member__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>회원명</label>
    <length>80</length>
    <type>Text</type>
</CustomField>