SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Member__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>전화 번호</label>
    <type>Phone</type>
</CustomField>