SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Member__c/fields/ReturnBook__c.field-meta.xml
<CustomField>
    <fullName>ReturnBook__c</fullName>
    <label>반납 유무</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>미대여</fullName>
            </value>
            <value>
                <fullName>미반납</fullName>
            </value>
            <value>
                <fullName>반납</fullName>
            </value>
            <value>
                <fullName>연체</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>